# lexor

./: .gitignore  Cargo.toml  README.md  Trunk.toml
backend/lexor-convert/: Cargo.toml
backend/lexor-convert/src/: kiselyov.rs  lib.rs
backend/lexor-core/: Cargo.toml
backend/lexor-core/benches/: parser_bench.rs
backend/lexor-core/src/: de_bruijn.rs  kiselyov.rs  lib.rs  name_generator.rs
backend/lexor-core/tests/: core_tests.rs
backend/lexor-parser/: Cargo.toml
backend/lexor-parser/src/: lib.rs
backend/lexor-reducer/: Cargo.toml
backend/lexor-reducer/benches/: church.rs
backend/lexor-reducer/src/: engineview.rs  graphred.rs  lambda.rs  lib.rs
backend/lexor-reducer/src/core/: arena.rs  engine.rs  mod.rs  node.rs
backend/lexor-reducer/tests/: reduction_tests.rs
frontend/lexor-api/: Cargo.toml
frontend/lexor-api/src/: graph.rs  lib.rs  request.rs  response.rs  source_id.rs  strategy.rs  visual.rs
frontend/lexor-wasm/: Cargo.toml  index.html
frontend/lexor-wasm/assets/: sw.js  worker.js
frontend/lexor-wasm/src/: app.rs  graph.rs  lib.rs  main.rs  messages.rs  node_style.rs  settings.rs  source.rs  state.rs  tab_context.rs  tab_viewer.rs  tabs.rs  worker_bridge.rs
lexor-compiler/: Cargo.toml
lexor-compiler/src/: arena.rs  graphred.rs  lib.rs  lir.rs  node.rs  reduction.rs  ski_parser.rs
lexor-convert/: Cargo.toml
lexor-convert/benches/: convert_bench.rs
lexor-convert/src/: convert.rs  lib.rs  lir.rs  ski.rs
lexor-core/: Cargo.toml
lexor-core/benches/: kiselyov_bench.rs  parser_bench.rs
lexor-core/src/: combinator.rs  de_bruijn.rs  interpreter.rs  kiselyov.rs  lambda.rs  lambda_expr.rs  lib.rs  parser.rs
lexor-core/tests/: core_tests.rs
lexor-parser/: Cargo.toml
lexor-parser/src/: lib.rs
lexor-reducer/: Cargo.toml
lexor-reducer/benches/: reduction_bench.rs
lexor-reducer/src/: arena.rs  engine.rs  engineview.rs  graphred.rs  lib.rs  node.rs  parser.rs  ski_parser.rs
lexor-reducer/src/core/: arena.rs  engine.rs  node.rs
lexor-reducer/tests/: reduction_tests.rs
report/: huhyph.tex  huhyph3.tex  huhyphc.tex  huhyphf.tex  huhyphn.tex  irodalom.bib  magyar.ldf  main.tex  onlabmacros.tex  sajatmacros.tex  template.tex
tests/: reduction_tests.rs
