[workspace]
resolver = "3"
members = [
    "./backend/lexor-reducer",
    "./backend/lexor-core",
    "./backend/lexor-parser",
    "./backend/lexor-convert",
    "./frontend/lexor-api",
    "./frontend/lexor-wasm",
]

[workspace.dependencies]
chumsky = "0.12.0"
slotmap = "1.1.1"
lower = "0.2.1"
thiserror = "2.0.18"
arrayvec = "0.7.6"
lexor-core = { path = "./backend/lexor-core", version = "*" }
lexor-parser = { path = "./backend/lexor-parser", version = "*" }
lexor-reducer = { path = "./backend/lexor-reducer", version = "*" }
lexor-api = { path = "./frontend/lexor-api", version = "*" }

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Orbán Levente <orban.levente.laszlo@gmail.com>"]
description = "A compiler and VM for lambda calculus targeting combinators."

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "deny", priority = -1 } # TODO: Enable before publishing crates

# Harden
## Stops panics
unwrap_used = "deny"
expect_used = "warn"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
unreachable = "warn"
unimplemented = "deny"
unchecked_time_subtraction = "deny"
todo = "warn"                       # TODO: clean up after prototyping
string_slice = "deny"
panic_in_result_fn = "deny"
panic = "deny"
exit = "deny"
as_conversions = "deny"
## Restrictions
if_then_some_else_none = "deny"
str_to_string = "deny"
implicit_clone = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
# missing_docs = "deny" # TODO: uncomment

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release-small]
inherits = "release"
opt-level = "s"
strip = true

[profile.release.package.lexor-wasm]
inherits = "release"
opt-level = "s"
strip = true
