[package]
name = "lexor-convert"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "convert_bench"
harness = false


[lints]
workspace = true
