[package]
name = "lexor-core"
version.workspace = true
authors.workspace = true
description = "Contains common, core lexor functionality"
edition = "2024"

[lints]
workspace = true

[dependencies]
rootcause = { workspace = true }
lower = { workspace = true }
lexor-parser = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false
