[package]
name = "lexor-reducer"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
lower = { workspace = true }
slotmap = { workspace = true }
arrayvec = { workspace = true }
rootcause = { workspace = true }
lexor-core = { workspace = true }
lexor-parser = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "church"
harness = false

