[package]
name = "lexor-reducer"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
chumsky = { workspace = true }
slotmap = { workspace = true }
lower = { workspace = true }
rootcause = { workspace = true }
lexor-core = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "reduction_bench"
harness = false
