[package]
name = "lexor-parser"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
chumsky = { workspace = true }
thiserror = { workspace = true }
lexor-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
