[package]
name = "lexor-reducer"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
lower = { workspace = true }
slotmap = { workspace = true }
arrayvec = { workspace = true }
thiserror = { workspace = true }
lexor-core = { workspace = true }
lexor-parser = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "church"
harness = false
