[package]
name = "lexor-wasm"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
lexor-api = { workspace = true }
egui = "0.33"
egui_dock = { version = "0.18", features = ["serde"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
    "wayland",
    "x11",
] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0" }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.91", features = [
    "Worker",
    "MessageEvent",
    "Window",
    "WorkerOptions",
    "WorkerType",
] }
wgpu = { version = "27.0", features = ["webgpu", "webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.9"

[lints]
workspace = true
